# videoadvance

AndroidVideoAdvance/: .gitignore  build.gradle  config.gradle  settings.gradle
AndroidVideoAdvance/annotation/: build.gradle
AndroidVideoAdvance/annotation/src/main/: AndroidManifest.xml
AndroidVideoAdvance/annotationLib/: build.gradle
AndroidVideoAdvance/annotationtest/: build.gradle
AndroidVideoAdvance/annotationtest/src/main/: AndroidManifest.xml
AndroidVideoAdvance/apilib/: build.gradle
AndroidVideoAdvance/app/: build.gradle
AndroidVideoAdvance/app/src/main/: AndroidManifest.xml
AndroidVideoAdvance/app/src/main/cpp/: com_leafye_androidvideoadvance_jni_Mp3Encoder.cpp  com_leafye_androidvideoadvance_jni_Mp3Encoder.h
AndroidVideoAdvance/app/src/main/cpp/lame/: mp3_encoder.cpp  mp3_encoder.h
AndroidVideoAdvance/app/src/main/res/layout/: activity_main.xml
AndroidVideoAdvance/app/src/main/res/values/: strings.xml
AndroidVideoAdvance/base/: build.gradle
AndroidVideoAdvance/base/src/main/: AndroidManifest.xml
AndroidVideoAdvance/ffmpegapp/: CMakeLists.txt  build.gradle
AndroidVideoAdvance/ffmpegapp/src/androidTest/java/com/leafye/ffmpegapp/: ExampleInstrumentedTest.kt
AndroidVideoAdvance/ffmpegapp/src/main/: AndroidManifest.xml
AndroidVideoAdvance/ffmpegapp/src/main/cpp/: AVpacket_queue.c  AVpacket_queue.h  audio_play.c  com_leafye_ffmpegapp_YeFFmpeg.cpp  com_leafye_ffmpegapp_YeFFmpeg.h  common.h  ffmpeg_cmd.c  media_player.c  nativelib.cpp  openSL_audio_player.c  video_filter.c  video_player.c
AndroidVideoAdvance/ffmpegapp/src/main/cpp/include/ffmpeg/: cmdutils.h
AndroidVideoAdvance/ffmpegapp/src/main/cpp/include/libavcodec/arm/: mathops.h
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/: BaseApplication.kt  Ext.kt  FFmpegUtils.kt  MainActivity.kt  YeFFmpeg.java
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/activity/: AudioHandleActivity.kt  MainActivity.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/ffmpeg/: FFmpegCmd.kt  Result.kt  ResultCallback.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/ffmpeg/exception/: DiscardException.kt  FFmpegException.kt  HandleErrorException.kt  ParamInvalidException.kt  TaskFullException.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/fragment/: AudioHandleFragment.kt  CMediaFragment.kt  MainFragment.kt  VideoHandleFragment.kt  VideoPlayFragment.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/fragment/base/: SelectFileFragment.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/model/: AudioModel.kt  CMediaModel.kt  MainFragModel.kt  MainModel.kt  VideoHandleModel.kt  VideoPlayModel.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/utils/: ContentUtils.kt  FFmpegTestFileManager.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/view/: VideoSurfaceView.kt
AndroidVideoAdvance/ffmpegapp/src/main/java/com/leafye/ffmpegapp/vm/: AudioHandleViewModel.kt  CMediaViewModel.kt  MainFragViewModel.kt  MainViewModel.kt  VideoHandleViewModel.kt  VideoPlayViewModel.kt
AndroidVideoAdvance/ffmpegapp/src/main/jni/: com_leafye_ffmpegapp_YeFFmpeg.cpp  com_leafye_ffmpegapp_YeFFmpeg.h  native-lib.cpp
AndroidVideoAdvance/ffmpegapp/src/main/res/anim/: anim_slide_in_left.xml
AndroidVideoAdvance/ffmpegapp/src/main/res/layout/: activity_audio_handle.xml  activity_main.xml  fragment_audio_handle.xml  fragment_c_media.xml  fragment_main.xml  fragment_video_handle.xml  fragment_video_play.xml
AndroidVideoAdvance/ffmpegapp/src/main/res/navigation/: navigation_main.xml
AndroidVideoAdvance/ffmpegapp/src/main/res/values/: strings.xml
AndroidVideoAdvance/ffmpegapp/src/test/java/com/leafye/ffmpegapp/: ExampleUnitTest.kt
AndroidVideoAdvance/ffmpegcollection/: build.gradle
AndroidVideoAdvance/ffmpegcollection/src/main/: AndroidManifest.xml
AndroidVideoAdvance/ffmpegcollection/src/main/res/values/: strings.xml
AndroidVideoAdvance/ffmpegcollection2/: CMakeLists.txt  build.gradle
AndroidVideoAdvance/ffmpegcollection2/src/androidTest/java/com/leafye/ffmpegcollection2/: ExampleInstrumentedTest.kt
AndroidVideoAdvance/ffmpegcollection2/src/main/: AndroidManifest.xml
AndroidVideoAdvance/ffmpegcollection2/src/main/java/com/leafye/ffmpegcollection2/: MainActivity.kt
AndroidVideoAdvance/ffmpegcollection2/src/main/res/values/: strings.xml
AndroidVideoAdvance/ffmpegcollection2/src/test/java/com/leafye/ffmpegcollection2/: ExampleUnitTest.kt
AndroidVideoAdvance/gpuimagedemo/: build.gradle
AndroidVideoAdvance/gpuimagedemo/src/main/: AndroidManifest.xml
AndroidVideoAdvance/gpuimagedemo/src/main/res/layout/: activity_main.xml  bottom_sheet_main.xml  item_filter.xml
AndroidVideoAdvance/opengldemo/: build.gradle
AndroidVideoAdvance/opengldemo/md/: README.md
AndroidVideoAdvance/opengldemo/src/main/: AndroidManifest.xml
AndroidVideoAdvance/opengldemo/src/main/jni/: Android.mk
AndroidVideoAdvance/opengldemo/src/main/res/layout/: activity_gl_camera.xml  activity_main.xml  activity_record_camera.xml  view_gl_camera.xml
AndroidVideoAdvance/opengldemo/src/main/res/raw/: camera1_fragment_shader.glsl  camera1_vertex_shader.glsl  triangle_color2_vertex_shader.glsl
AudioRecordDemo/: .gitignore  build.gradle  settings.gradle
AudioRecordDemo/app/: build.gradle  proguard-rules.pro
AudioRecordDemo/app/src/main/: AndroidManifest.xml
AudioRecordDemo/gradle/wrapper/: gradle-wrapper.properties
AudioRecordDemo/pocketsphinxlib/: build.gradle
AudioRecordDemo/speexlib/: CMakeLists.txt  build.gradle
AudioRecordDemo/speexlib/src/androidTest/java/com/leafye/speex/: ExampleInstrumentedTest.kt
AudioRecordDemo/speexlib/src/main/: AndroidManifest.xml
AudioRecordDemo/speexlib/src/main/java/com/leafye/speex/: Hello.java  HelloUtils.java  SpeexUtil.java
AudioRecordDemo/speexlib/src/main/jni/: Android.mk  com_leafye_speex_SpeexUtil.cpp  com_leafye_speex_SpeexUtil.h  speex.c
AudioRecordDemo/speexlib/src/test/java/com/leafye/speex/: ExampleUnitTest.kt
(+150 files in other folders)
